--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-p5js-tonejs-starter-kit",
+  "name": "triangles-no-5",
   "version": "1.0.0",
-  "homepage": ".",
+  "homepage": "https://triangles-no-5.labcat.nz",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
